--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  library-app:
-    image: library-app
+  app:
+    image: notes-app
     build: .
     ports:
     - "3000:3000"
